force-app/main/default/objects/PM_Employee_Competency__c/PM_Employee_Competency__c.object-meta.xml
<CustomObject>
    <label>Employee Competency</label>
    <nameField>
        <displayFormat>ECN-{000}</displayFormat>
        <label>Employee Competency Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employee Competencies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>