force-app/main/default/objects/PM_Employee_Competency__c/fields/Competency__c.field-meta.xml
<CustomField>
    <fullName>Competency__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Competency</label>
    <referenceTo>PM_Competency__c</referenceTo>
    <relationshipLabel>Employee Competencies</relationshipLabel>
    <relationshipName>Employee_Competencies</relationshipName>
    <type>Lookup</type>
</CustomField>