force-app/main/default/objects/PM_Employee_Competency__c/fields/Final_Score__c.field-meta.xml
<CustomField>
    <fullName>Final_Score__c</fullName>
    <formula>( Mid_Year_Score__c +  Year_End_Score__c )/2</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Final Score</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>