force-app/main/default/objects/PM_Employee_Competency__c/fields/Year_End_Rating__c.field-meta.xml
<CustomField>
    <fullName>Year_End_Rating__c</fullName>
    <label>Year End Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Performance_Rating</valueSetName>
    </valueSet>
</CustomField>